--- a/index.html
+++ b/index.html
@@ -738,7 +738,8 @@
 
         // Format date for display
         function formatDate(dateString) {
-            const date = new Date(dateString + 'T00:00:00');
+            const [year, month, day] = dateString.split('-').map(Number);
+            const date = new Date(year, month - 1, day);
             const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
             return date.toLocaleDateString('en-US', options);
         }
