Strengthen disabled Edit Mode button visibility

--- a/index.html
+++ b/index.html
@@ -222,15 +222,15 @@
         }
 
         .edit-mode-toggle:disabled {
-            background: #f0f0f0;
-            color: #ccc;
-            border-color: #e0e0e0;
+            background: #e8e8e8;
+            color: #999;
+            border-color: #d0d0d0;
             cursor: not-allowed;
-            opacity: 0.6;
+            opacity: 0.75;
         }
 
         .edit-mode-toggle:disabled:hover {
-            background: #f0f0f0;
+            background: #e8e8e8;
         }
 
         .progress-section {
