--- a/index.html
+++ b/index.html
@@ -375,14 +375,20 @@
 
         #addButton {
             padding: 12px 25px;
-            background: #BF3143;
-            color: white;
-            border: none;
+            background: #e8e8e8;
+            color: #888;
+            border: 2px solid #e0e0e0;
             border-radius: 10px;
             font-size: 16px;
             font-weight: 600;
+            cursor: not-allowed;
+            transition: transform 0.2s, opacity 0.3s, background 0.3s, color 0.3s;
+        }
+
+        #addButton:not(:disabled) {
+            background: #BF3143;
+            color: white;
             cursor: pointer;
-            transition: transform 0.2s, opacity 0.3s, background 0.3s;
         }
 
         #addButton:hover:not(:disabled) {
@@ -395,7 +401,8 @@
         }
 
         #addButton:disabled {
-            opacity: 0.5;
+            background: #e8e8e8;
+            color: #999;
             cursor: not-allowed;
         }
 
@@ -408,7 +415,7 @@
         .input-section {
             display: flex;
             gap: 10px;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
 
         .change-template-button {
@@ -542,7 +549,7 @@
             align-items: center;
             justify-content: center;
             gap: 8px;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
 
         .button-icon {
